# rust-hexagonal-architecture

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml
migrations/: 20221014094903_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  server.rs
src/adapters/: mod.rs
src/adapters/inbound/: mod.rs
src/adapters/inbound/rest_server/: mod.rs  routes.rs
src/adapters/outbound/: mod.rs
src/adapters/outbound/emails/: mod.rs
src/adapters/outbound/users_repositories/: mod.rs  mongo_db.rs
src/application/: mod.rs
src/domain/: mod.rs
src/domain/aggregators/: mod.rs
src/domain/subscribers/: services.rs
src/domain/subscriptions/: services.rs  types.rs
src/domain/users/: services.rs  types.rs
src/ports/inbound/: mod.rs
src/ports/outbound/: mod.rs
src/ports/outbound/databases/: mongo_db.rs
src/ports/outbound/repositories/: mongo_db.rs
src/server/: app.rs  configuration.rs  mod.rs  routes.rs
tests/: health_check.rs
