[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.65"
reqwest = "0.11.12"
serde = "1.0.145"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
